# fgfx

./: CMakeLists.txt  README.md  gfx_test.cpp
etc/: CMakeLists.txt  gl_utils.h  sdl_gl_window.cpp
gfx/: CMakeLists.txt  geometrybuffer.h  graphicscontext.cpp  graphicscontext.h  shader.h
gfx/shaders/: solid_texture_frag.glsl
gfx/utils/: 3dshapes.h  camera.cpp  camera.h  gl_program_builder.h  tuple.h  vertex.h
tests/: CMakeLists.txt
